fix: stabilize binary Step4 validation and performance